// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component sanity matches default snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-controls="dropdown-list-2"
        aria-expanded="false"
        aria-haspopup="dropdown"
        class="sc-AxjAm sc-AxirZ jdWLdj"
        id="dropdown-button-2"
      >
        <span
          class="sc-AxjAm gKHFTW"
        >
          Open dropdown
        </span>
      </div>
      <div
        aria-orientation="vertical"
        class="sc-AxjAm dgHzaX"
        data-placement="bottom-start"
        hidden=""
        id="dropdown-list-2"
        role="dropdown"
        style="transform-origin: top left;"
        tabindex="-1"
      />
    </div>
  </body>,
  "container": <div>
    <div
      aria-controls="dropdown-list-2"
      aria-expanded="false"
      aria-haspopup="dropdown"
      class="sc-AxjAm sc-AxirZ jdWLdj"
      id="dropdown-button-2"
    >
      <span
        class="sc-AxjAm gKHFTW"
      >
        Open dropdown
      </span>
    </div>
    <div
      aria-orientation="vertical"
      class="sc-AxjAm dgHzaX"
      data-placement="bottom-start"
      hidden=""
      id="dropdown-list-2"
      role="dropdown"
      style="transform-origin: top left;"
      tabindex="-1"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Dropdown component sanity matches themed snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-controls="dropdown-list-12"
        aria-expanded="false"
        aria-haspopup="dropdown"
        class="sc-AxjAm sc-AxirZ jdWLdj"
        id="dropdown-button-12"
      >
        <span
          class="sc-AxjAm gKHFTW"
        >
          Open dropdown
        </span>
      </div>
      <div
        aria-orientation="vertical"
        class="sc-AxjAm jBJqQZ"
        data-placement="bottom-start"
        hidden=""
        id="dropdown-list-12"
        role="dropdown"
        style="transform-origin: top left;"
        tabindex="-1"
      />
    </div>
  </body>,
  "container": <div>
    <div
      aria-controls="dropdown-list-12"
      aria-expanded="false"
      aria-haspopup="dropdown"
      class="sc-AxjAm sc-AxirZ jdWLdj"
      id="dropdown-button-12"
    >
      <span
        class="sc-AxjAm gKHFTW"
      >
        Open dropdown
      </span>
    </div>
    <div
      aria-orientation="vertical"
      class="sc-AxjAm jBJqQZ"
      data-placement="bottom-start"
      hidden=""
      id="dropdown-list-12"
      role="dropdown"
      style="transform-origin: top left;"
      tabindex="-1"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
